@@ -27,11 +27,13 @@ public class BeanUtil {
 	 * @return 是否为Bean对象
 	 */
 	public static boolean isBean(Class<?> clazz){
-		Method[] methods = clazz.getMethods();
-		for (Method method : methods) {
-			if(method.getParameterTypes().length == 1 && method.getName().startsWith("set")){
-				//检测包含标准的setXXX方法即视为标准的JavaBean
-				return true;
+		if(ClassUtil.isNormalClass(clazz)){
+			Method[] methods = clazz.getMethods();
+			for (Method method : methods) {
+				if(method.getParameterTypes().length == 1 && method.getName().startsWith("set")){
+					//检测包含标准的setXXX方法即视为标准的JavaBean
+					return true;
+				}
 			}
 		}
 		return false;
