@@ -803,7 +803,37 @@ public class ClassUtil {
 		}
 		return method;
 	}
+	
+	/**
+	 * 是否为抽象类
+	 * @param clazz 类
+	 * @return 是否为抽象类
+	 */
+	public static boolean isAbstract(Class<?> clazz){
+		return Modifier.isAbstract(clazz.getModifiers());
+	}
 
+	/**
+	 * 是否为标准的类<br>
+	 * 这个类必须：<br>
+	 * 1、非接口
+	 * 2、非抽象类
+	 * 3、非Enum枚举
+	 * 4、非数组
+	 * 5、非注解
+	 * 6、非原始类型（int, long等）
+	 * @param clazz
+	 * @return
+	 */
+	public static boolean isNormalClass(Class<?> clazz){
+		return false == clazz.isInterface()
+				&& false == isAbstract(clazz)
+				&& false == clazz.isEnum()
+				&& false == clazz.isArray()
+				&& false == clazz.isAnnotation()
+				&& false == clazz.isSynthetic()
+				&& false == clazz.isPrimitive();
+	}
 	// --------------------------------------------------------------------------------------------------- Private method start
 	/**
 	 * 文件过滤器，过滤掉不需要的文件<br>
