@@ -1,0 +1,17 @@
+package com.xiaoleilu.hutool.demo;
+
+import java.util.HashMap;
+
+import com.xiaoleilu.hutool.lang.Console;
+import com.xiaoleilu.hutool.util.BeanUtil;
+
+/**
+ * BeanUtil类Demo
+ * @author Looly
+ *
+ */
+public class BeanUtilDemo {
+	public static void main(String[] args) {
+		Console.log(BeanUtil.isBean(HashMap.class));
+	}
+}
